bug 368709 - Adds missing trailing slash to gTzIdPrefix to make comparisons work. r1=ctalbert, r2=mvl